<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:transitionName="container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBacground"
        android:fitsSystemWindows="false"
        >

    <android.support.design.widget.AppBarLayout
            android:id="@+id/main_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/white"
            android:fitsSystemWindows="true"
            app:elevation="0dp"   >


        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"
                android:background="@color/white"
                android:theme="@style/ThemeOverlay.AppCompat.Light" >

            <TextView
                    android:id="@+id/toolbar_title"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:singleLine="false"
                    android:maxLines="1"
                    android:text="@string/reminder_setting_title"
                    android:fontFamily="@font/exo_bold"
                    android:textColor="@color/black"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
                    />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.1"
            android:background="@color/grey"
            app:layout_constraintTop_toBottomOf="@+id/main_appbar"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_marginTop="@dimen/margin_padding_8dp"
            android:paddingStart="@dimen/margin_padding_16dp"
            android:paddingEnd="@dimen/margin_padding_16dp"
            app:layout_constraintTop_toBottomOf="@+id/divider">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/margin_padding_8dp"
                android:paddingBottom="@dimen/margin_padding_8dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingTop="@dimen/margin_padding_8dp"
                android:paddingBottom="@dimen/margin_padding_8dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release_reminder"
                    android:textColor="@color/black"
                    android:fontFamily="@font/exo_bold"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release_reminder_desc"
                    android:fontFamily="@font/exo"
                    android:textSize="12sp"/>

        </LinearLayout>
            <Switch
                    android:id="@+id/switch_release"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/tab_selector"
                    android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.1"
                android:background="@color/grey"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/margin_padding_8dp"
                android:paddingBottom="@dimen/margin_padding_8dp">
            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/margin_padding_8dp"
                    android:paddingBottom="@dimen/margin_padding_8dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/daily_reminder"
                        android:textColor="@color/black"
                        android:fontFamily="@font/exo_bold"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/daily_reminder_desc"
                        android:fontFamily="@font/exo"
                        android:textSize="12sp"/>

            </LinearLayout>
            <Switch
                    android:id="@+id/switch_daily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/tab_selector"
                    android:layout_gravity="center_vertical"/>
        </LinearLayout>

    </LinearLayout>





</android.support.constraint.ConstraintLayout>