<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:transitionName="container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fitsSystemWindows="false"
>

    <android.support.design.widget.AppBarLayout
            android:id="@+id/main_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintTop_toTopOf="parent"
            android:fitsSystemWindows="true"    >


        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"
                android:background="@color/white"
                android:theme="@style/ThemeOverlay.AppCompat.Light" android:gravity="center_vertical">
            <TextView
                    android:id="@+id/toolbar_title"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:singleLine="false"
                    android:maxLines="1"
                    android:fontFamily="@font/exo_bold"
                    android:textColor="@color/black"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/main_appbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <android.support.v4.widget.Space
                    android:id="@+id/space_appbar"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintBottom_toBottomOf="@+id/vv_trailer"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

            <android.support.v4.widget.Space
                    android:id="@+id/space_poster"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="30dp"
                    app:layout_constraintBottom_toBottomOf="@+id/vv_trailer"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

            <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/iv_poster"
                    android:layout_width="100dp"
                    android:layout_height="140dp"
                    android:layout_marginStart="@dimen/margin_padding_32dp"
                    android:contentDescription="@string/img_poster_desc"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_placeholder"
                    android:transitionName="illusration"
                    app:layout_collapseMode="parallax"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/space_poster"

                    app:riv_corner_radius="5dp" />

            <TextView
                    android:id="@+id/tv_tittle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_padding_16dp"
                    android:layout_marginTop="@dimen/margin_padding_8dp"
                    android:layout_marginEnd="@dimen/margin_padding_16dp"
                    android:fontFamily="@font/exo_bold"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_poster"
                    app:layout_constraintTop_toBottomOf="@id/vv_trailer" />

            <TextView
                    android:id="@+id/tv_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_padding_16dp"
                    android:fontFamily="@font/exo_bold"
                    android:maxLines="1"
                    android:textColor="@color/blackSoft"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/iv_poster"
                    app:layout_constraintTop_toBottomOf="@id/tv_tittle" />


            <TextView
                    android:id="@+id/tv_score_tittle"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_padding_16dp"
                    android:layout_marginTop="@dimen/margin_padding_16dp"
                    android:fontFamily="@font/exo"
                    android:text="@string/user_score"
                    android:textColor="@color/blackSoft"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_poster" />

            <TextView
                    android:id="@+id/tv_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_padding_16dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/exo"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_score_tittle" />

            <android.support.v7.widget.AppCompatRatingBar
                    android:id="@+id/rb_score"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:rating="3.23"
                    android:stepSize="0"
                    android:theme="@style/RatingBar"
                    app:layout_constraintBottom_toBottomOf="@id/tv_score"
                    app:layout_constraintStart_toEndOf="@id/tv_score" />

            <LinearLayout
                    android:id="@+id/btn_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="@dimen/margin_padding_8dp"
                    android:layout_marginEnd="@dimen/margin_padding_16dp"
                    android:background="@drawable/bg_rounded_gradient"
                    android:backgroundTint="@color/colorBacground"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/margin_padding_8dp"
                    android:paddingTop="@dimen/margin_padding_4dp"
                    android:paddingEnd="@dimen/margin_padding_8dp"
                    android:paddingBottom="@dimen/margin_padding_4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_score_tittle">

                <ImageView
                        android:id="@+id/iv_heart"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="2dp"
                        android:contentDescription="@string/desc_ic_heart"
                        android:src="@drawable/ic_heart"
                        android:tint="@color/grey" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_padding_4dp"
                        android:fontFamily="@font/exo"
                        android:text="@string/love_it"
                        android:textColor="@color/blackSoft"
                        android:textSize="12sp" />

            </LinearLayout>

            <TextView
                    android:id="@+id/tv_synopsis_tittle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_padding_16dp"
                    android:layout_marginTop="@dimen/margin_padding_16dp"
                    android:layout_marginBottom="@dimen/margin_padding_8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/exo"
                    android:text="@string/synopsis"
                    android:textColor="@color/blackSoft"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_score" />

            <TextView
                    android:id="@+id/tv_synopsis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_padding_16dp"
                    android:layout_marginEnd="@dimen/margin_padding_16dp"
                    android:layout_marginBottom="@dimen/margin_padding_8dp"
                    android:paddingBottom="@dimen/margin_padding_32dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/exo"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_synopsis_tittle" />

            <fragment
                    android:id="@+id/vv_trailer"
                    class="com.google.android.youtube.player.YouTubePlayerSupportFragment"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_placeholder"
                    android:transitionName="illusration"
                    app:layout_collapseMode="parallax"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>





</android.support.constraint.ConstraintLayout>