<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false"
        tools:context=".view.main.MainActivity"
        android:background="@color/colorBacground">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_padding_16dp"
                android:layout_marginEnd="@dimen/margin_padding_8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:elevation="2dp">



        </android.support.v7.widget.Toolbar>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="-24dp"
                android:gravity="end"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp">


            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:layout_marginTop="-4dp">

                <ImageView
                        android:id="@+id/iv_logo"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:srcCompat="@drawable/ic_roll_anim"
                        android:alpha="0.9"
                        android:paddingTop="4dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="@dimen/margin_padding_8dp"
                        android:contentDescription="@string/desc_ic_movie"/>
                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/black"
                            android:text="LAYAR"
                            android:textSize="20sp"
                            android:layout_marginBottom="-6dp"
                            app:fontFamily="@font/exo_bold"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/black"
                            android:text="NGACA"
                            android:textSize="20sp"
                            app:fontFamily="@font/exo_bold"/>

                </LinearLayout>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/colorPrimary"
                        android:text="21"
                        android:layout_marginStart="2dp"
                        android:layout_gravity="bottom"
                        android:textSize="20sp"
                        app:fontFamily="@font/exo_bold"/>
            </LinearLayout>


            <android.support.design.widget.TabLayout
                    android:id="@+id/tabs"
                    android:layout_width="160dp"
                    android:layout_height="35dp"
                    android:layout_gravity="bottom"
                    android:background="@drawable/bg_rounded_gradient"
                    android:backgroundTint="@color/colorBacground"
                    app:tabTextColor="@color/black"
                    app:tabSelectedTextColor="@color/white"
                    app:tabBackground="@drawable/tab_selector"
                    app:tabTextAppearance="@style/TabLayout"
                    app:tabIndicatorHeight="0dp"/>

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_gravity="bottom"
                          android:background="@drawable/bg_rounded_gradient"
                          android:backgroundTint="@color/colorBacground"
                            android:visibility="gone">
                <LinearLayout
                        android:id="@+id/tab_movie"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:background="@drawable/bg_rounded_gradient"
                        android:orientation="horizontal"
                        android:gravity="center_horizontal|center_vertical"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp">
                    <ImageView
                            android:id="@+id/iv_movie"
                            android:layout_width="14dp"
                            android:layout_height="14dp"
                            android:src="@drawable/ic_roll"
                            android:layout_marginEnd="@dimen/margin_padding_4dp"
                            android:contentDescription="@string/desc_ic_movie"
                            android:tint="@color/white"/>

                    <TextView
                            android:id="@+id/tv_movie"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:fontFamily="@font/exo_bold"
                            android:textAllCaps="true"
                            android:text="@string/menu_movie"
                            android:textColor="@color/white"
                            android:textSize="10sp"/>
                </LinearLayout>


                <LinearLayout
                        android:id="@+id/tab_tv_show"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:orientation="horizontal"
                        android:gravity="center_horizontal|center_vertical"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp">

                    <ImageView
                            android:id="@+id/iv_tv_show"
                            android:layout_width="14dp"
                            android:layout_height="14dp"
                            android:src="@drawable/ic_tv"
                            android:layout_marginEnd="@dimen/margin_padding_4dp"
                            android:contentDescription="@string/desc_ic_movie"
                            android:tint="@null"/>

                    <TextView
                            android:id="@+id/tv_tv_show"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:fontFamily="@font/exo_bold"
                            android:textColor="@color/black"
                            android:textSize="10sp"
                            android:textAllCaps="true"
                            android:text="@string/menu_tv_show" />

                </LinearLayout>
            </LinearLayout>



        </LinearLayout>


        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.1"
            android:background="@color/grey" />


        <android.support.v4.view.ViewPager
                android:id="@+id/vp_main"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/colorBacground"
                app:layout_constraintTop_toBottomOf="@+id/divider" />


        <FrameLayout
                android:id="@+id/contentLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/colorBacground"
                app:layout_constraintTop_toBottomOf="@+id/divider"
        android:visibility="gone"/>
    </LinearLayout>



</android.support.constraint.ConstraintLayout>